--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -585,7 +585,7 @@ ja:
         title_alternative: 代替タイトル
         title_transcription: タイトルよみ
         classification_number: 分類番号
-        manifestation_identifier: 出版した資料の識別子
+        identifier: 出版した資料の識別子
         date_of_publication: 出版日
         deleted_at: 削除時刻
         access_address: アクセスアドレス
@@ -987,6 +987,7 @@ ja:
     edit_user_profile: "%{login_name} さんのプロフィールの編集"
     sign_in: "ログイン"
     sign_out: "ログアウト"
+    sign_up: "新規登録"
     login_name: "ユーザ名"
     password: "パスワード"
     email_and_password: "電子メールとパスワード"
@@ -1134,8 +1135,6 @@ ja:
     not_found: "ページが見つかりませんでした"
     access_denied: "アクセスが拒否されました"
     last_updated: "最終更新日"
-    remember_me: "ウインドウを閉じてもログインしたままにする"
-    forgot_your_password: "パスワードを忘れましたか?"
   title:
     index: "一覧"
     show: "表示"
@@ -1350,9 +1349,12 @@ ja:
     reset_checkout_icalendar_url: "貸出期限通知用のiCalendarファイルのURLをリセットする"
     you_have_to_save_profile_to_activate_feed_url: "新しいURLを有効にするには、プロフィールを更新する必要があります。"
     you_have_to_save_profile_to_deactivate_feed_url: "URLを無効にするには、プロフィールを更新する必要があります。"
-    sign_up: "新規登録"
     could_not_setup_account: "利用者のアカウントを作成できませんでした。もう一度やり直すか、管理者に連絡してください。"
     resend_confirmation_instruction: '確認手順をもう一度取り寄せる'
+    remember_me: "ウインドウを閉じてもログインしたままにする"
+    forgot_your_password: "パスワードを忘れましたか?"
+    send_me_reset_password_instruction: "パスワードを再発行する"
+    change_my_password: "パスワードを変更する"
   news_post:
     library_group_news_post: "%{library_group_name} からのお知らせ"
   reserve:
@@ -1367,6 +1369,7 @@ ja:
     this_item_is_not_reserved: "この資料は予約されていません。"
     invalid_item: "無効な所蔵情報です。"
     show: "予約の詳細"
+    invalid_date: "無効な日付です。"
   purchase_request:
     user_purchase_request: "%{login_name} さんの購入依頼資料"
     library_group_purchase_request: "%{library_group_name} での購入依頼資料"
@@ -1459,3 +1462,4 @@ ja:
   import_request:
     record_not_found: 書誌レコードが見つかりませんでした。
     invalid_isbn: ISBNが正しくありません。
+    isbn_taken: はすでに登録されています。
