--- a/config/locales/translation_en.yml
+++ b/config/locales/translation_en.yml
@@ -1366,6 +1366,7 @@ en:
     forgot_your_password: "Forgot your password?"
     send_me_reset_password_instruction: "Send me reset password instruction"
     change_my_password: "Change my password"
+    management: "User management"
   news_post:
     library_group_news_post: "News from %{library_group_name}"
   reserve:
