--- a/README.rdoc
+++ b/README.rdoc
@@ -2,8 +2,8 @@
 
 == Related projects
 * {Next-L Enju Root}[https://github.com/next-l/enju_root]
-* {Next-L Enju Leaf}[https://github.com/nabeta/enju_leaf]
+* {Next-L Enju Leaf}[https://github.com/next-l/enju_leaf]
 
 == Authors and contributors
-* {TANABE, Kosuke}[http://mwr.mediacom.keio.ac.jp/~tanabe/]
+* {TANABE, Kosuke}[https://github.com/nabeta]
 * {Project Next-L}[http://www.next-l.jp]
