--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,5 @@
 = Next-L Enju Flower
-{<img src="https://travis-ci.org/next-l/enju_flower.png?branch=master" alt="Build Status" />}[https://travis-ci.org/next-l/enju_flower]
+{<img src="https://travis-ci.org/next-l/enju_flower.svg?branch=master" alt="Build Status" />}[https://travis-ci.org/next-l/enju_flower]
 {<img src="https://img.shields.io/coveralls/next-l/enju_flower.svg" alt="Coverage Status" />}[https://coveralls.io/r/next-l/enju_flower?branch=master]
 {<img src="https://hakiri.io/github/next-l/enju_flower/master.svg" alt="security" />}[https://hakiri.io/github/next-l/enju_flower/master]
 
